# sensors_log

./: .gitignore  pyproject.toml
src/sensors_log/: __main__.py
tests/: test_capture_fan_speed.py  test_delete_old_logs.py
